2011-08-10

	* libsylph/html.c: minor code cleanup.

2011-08-10

	* libsylph/html.c: html_get_parenthesis(): fixed a bug that </style>
	  end tags were not properly searched if whitespace was inserted in it
	  (ex. </style > </style[\n]>).

2011-08-10

	* libsylph/procmime.c: removed alloca() calls.

2011-08-03

	* src/quick_search.c: applied a patch to fix quick search text color
	  on dark themes (thanks to speps).

2011-08-03

	* libsylph/folder.[ch]
	  src/summaryview.[ch]: reflect account preference for trash folder.
	  summary_colorlabel_menu_item_activate_item_cb(): removed a warning.

2011-07-21

	* src/textview.c: use style colors for part widgets.

2011-07-20

	* libsylph/html.c: html_get_tag(): support tags such as <br/> and
	  <name value="foo" />.

2011-07-05

	* libsylph/procmsg.c: use memory mapped file to read cache files.
	  This improves the speed of cache reading.
	  (requires GTK+ >= 2.8)

2011-06-30

	* version 3.2.0beta1

2011-06-30

	* libsylph/socket.c: my_getaddrinfo(): removed redundant zero clear.

2011-06-30

	* src/textview.c
	  src/mimeview.[ch]: added 'Print' menu in mime part menu.
	  Added part widget to message/rfc822 part.

2011-06-29

	* libsylph/socket.c: win32: supported IPv6 with fallback implementation
	  for Windows 2000.
	* makewin32.sh: enabled IPv6.

2011-06-28

	* src/foldersel.c: removed alloca() calls.
	* src/account_dialog.c: account_open(): removed alloca() call.
	* src/folderview.c: removed alloca() calls.
	* src/undo.c: undo_insert_text_cb(): removed alloca() call.
	* libsylph/xml.c: xml_unescape_str(): removed alloca() call.

2011-06-24

	* src/update_check.c: win32: also check the file size of updater exe.

2011-06-24

	* src/summaryview.c: summary_colorlabel_menu_item_activate_item_cb():
	  removed alloca().
	* libsylph/utils.c: my_tmpfile(): win32: fixed a memory leak.
	  unix: removed alloca().
	* src/compose.c: removed alloca() calls.

2011-06-23

	* src/mimeview.[ch]