@@ -1,5 +1,10 @@
 2011-08-10
 
+	* libsylph/procmsg.c: procmsg_open_cache_file_mmap(): removed
+	  warnings when cache files were not found.
+
+2011-08-10
+
 	* libsylph/html.c: minor code cleanup.
 
 2011-08-10
